3) Please include your name with the changes you make.
4) Whenever making an update, please update this file, no matter how
small - this just lets others know that the file has changed if nothing
else.  With this, include the file(s) that you changed.
------------------------------------------------------------------------------
Changes for SVN:

Add ability to specify port that crossfire listens to in settings file.
Handy when you want to run 2 servers on same host and don't want to
mess with command line options.
--
lib/settings: Add port variable and comment on its usage.
server/init.c: Add code to handle port value in settings file.
MSW 2007-09-17

Fix chaos attacktypes when used from a weapon - Fixes bug 1795875.
Problem was target of attack was getting attacktype changed, and
attacker was never getting chaos attacktypes.
--
include/attack.h: move ATTACKS array and Chaos_Attacks structure
  here.  server/attack.c now needs that data, so having it only in
  server/spell_util.c no longer works.
server/attack.c:  Remove call to shuffle_attack(), instead just update
  the local type (attack type) variable.
server/spell_util.c: Remove ATTACKS array - moved to include/attack.h.
MSW 2007-09-16

Fix problems with player updating client with spell handling - should all
work now.
--
server/login.c: Move esvr_add_spells() and fix_object() to after 
  esvr_new_player() - when client gets new player protocol from server,
  it purges all info it has, including spell data.
server/player.c: Remove the line that clears the monitor_spells in the
  socket structure.  With the clear there, if you play a new character on
  the same server (savebed, a to play again), this second character
  doesn't get any spells.
socket/request.c: Check to see if pl->spell_state is non null in 
  esrv_update_spells() - in this way, server doesn't try to update
  spells on client before the first add_player_spells() is called.
--
MSW 2007-09-16
